--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,3 +62,30 @@
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
+
+
+
+/*Dashboard*/
+.explainFeatures {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.img-with-text {
+    text-align: justify;
+    width: [width of img];
+}
+
+.img-with-text img {
+    display: block;
+    margin: 0 auto;
+}
+
+.img-with-text h5 {
+  margin: 20px 25px 0 25px;
+}
+
+.explainFeatures h5 {
+  font-size: 18px;
+}
