--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,8 +62,9 @@
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
-
-
+.addButton {
+  float: right;
+}
 
 /*Dashboard*/
 .explainFeatures {
@@ -73,13 +74,13 @@
 }
 
 .img-with-text {
-    text-align: justify;
-    width: [width of img];
+  text-align: justify;
+  width: [width of img];
 }
 
 .img-with-text img {
-    display: block;
-    margin: 0 auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .img-with-text h5 {
